[package]
name = "push-flex-message"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "push-flex-message"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"

# LINE Bot SDK packages
line-bot-sdk-messaging-api = { path = "../../packages/line-bot-sdk-messaging-api" }

